1. Fixed z-index issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -190,6 +190,8 @@
 	right: 0;
 	transition: all 0.3s;
 	overflow-y: hidden;
+	background: rgb(251, 254, 255);
+	z-index: 1006;
 
 	.help-center-unsubscribe {
 		position: absolute;
@@ -197,6 +199,7 @@
 		bottom: 0;
 		right: 0;
 		left: 0;
+		display: none;
 	}
 	.drag-divider {
 		position: absolute;
@@ -233,12 +236,13 @@
 		position: absolute;
 		right: 0;
 		cursor: pointer;
+		z-index: 999;
 	}
-	object,
-	embed,
 	iframe {
-		width: 100%;
-		height: calc(100vh - 70px);
+		width: calc(100% - 24px);
+		height: calc(100vh - 82px);
+		overflow-y: auto;
+		padding: 12px 12px 0;
 	}
 
 	.contact-wrapper {
@@ -252,6 +256,7 @@
 			display: flex;
 			transition: all 0.2s;
 			cursor: pointer;
+			position: relative;
 			&:hover {
 				background: #f0f2f5;
 				border-radius: 10px;
